# meam4600_final_proj

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: chonkdiff_elliptic.yaml  posterior_projection.yaml  posterior_projection_big.yaml  posterior_projection_burgers_bc.yaml  posterior_projection_burgers_ic.yaml  posterior_projection_heat_equation.yaml  posterior_projection_linear_elliptic.yaml  posterior_projection_navier_stokes.yaml  posterior_projection_reaction_diffusion.yaml
final_project/notes/: experiment_matrix.md
final_project/references/: SOURCE_CATALOG.md
final_project/references/text/: diffusionpde.txt  pcfm.txt
reports/: build_presentation_assets.py  build_report_figures.py  final_project_report.tex  final_projection_study_presentation.tex  final_projection_study_summary.md  multifamily_extension_summary.md  presentation_data.json  submission_checklist.md  summarize_family_runs.py
src/chonkdiff/: __init__.py  benchmark.py  config.py  dataset.py  generate_dataset.py  oracle.py
src/posterior_projection/: __init__.py  config.py  dataset.py  evaluate.py  families.py  flow.py  generate_family_dataset.py  model.py  objectives.py  pipeline.py  problem.py  projection.py  sample.py  study.py  train.py
tests/: test_chonkdiff_backend.py  test_posterior_projection.py
