[project]
name = "meam4600-final-proj"
version = "0.1.0"
description = "Posterior projection study for PDE generative sampling"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "matplotlib",
    "pyyaml",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

